footer color changed, overflow-x fix

--- a/StockControl/add/add.css
+++ b/StockControl/add/add.css
@@ -382,7 +382,7 @@ option:first {
 footer {
     width: 100%;
     height: 150px;
-    background-color: #d9d9d9;
+    background-color: #a1a1a1;
     display: flex;
     justify-content: center;
     align-items: center;
