--- a/StockControl/all/all.css
+++ b/StockControl/all/all.css
@@ -413,7 +413,7 @@ td {
 footer {
     width: 100%;
     height: 150px;
-    background-color: #d9d9d9;
+    background-color: #a1a1a1;
     display: flex;
     justify-content: center;
     align-items: center;
