--- a/StockControl/category/category.css
+++ b/StockControl/category/category.css
@@ -153,7 +153,7 @@ header h1 {
 footer {
     width: 100%;
     height: 150px;
-    background-color: #d9d9d9;
+    background-color: #a1a1a1;
     display: flex;
     justify-content: center;
     align-items: center;
