--- a/StockControl/home/home.css
+++ b/StockControl/home/home.css
@@ -5,7 +5,7 @@
     font-family: sans-serif;
 }
 
-body {
+body, html {
     background-color: rgb(240, 240, 240);
     width: 100%;
     height: 100vh;
